Added a htop-like console for process power consumption monitoring, try running PPM-Interactive.ps1

--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,8 @@ MsrReader.dll
 # Library folders
 LibreHardwareMonitor/
 LibreRelease/
+
+# Intel PCM binaries (download separately)
+pcm/
+pcm-*.exe
+*.sys
